# kiwi-admin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  dev.bat  dev.sh  index.html  main.js
.github/workflows/: rust.yml
nginx/: mime.types  nginx.conf  prod.conf
src/: app.rs  auth.rs  form_data.rs  lib.rs  loader_task.rs
src/api/: error.rs  gallery.rs  mod.rs  multipart.rs  password_reset.rs  session.rs  users.rs
src/bindings/: sortable.rs
src/components/: auth.rs  enum_selector.rs  error.rs  footer.rs  header.rs  loading.rs  mod.rs  pagination.rs  search.rs  sidebar.rs
src/routes/: dashboard.rs  forgot_password.rs  gallery_create.rs  gallery_edit.rs  gallery_list.rs  login.rs  mod.rs  not_found.rs  password_reset.rs  users_create.rs  users_edit.rs  users_list.rs
static/: footer-component.css  gallery-list-route.css  general.css  header-component.css  loading-component.css  sidebar-component.css
