[package]
name = "kiwi-admin"
version = "0.1.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
log = "0.4.6"
thiserror = "1.0"
wasm-bindgen = "0.2.67"
wasm-logger = "0.2.0"
wee_alloc = { version = "0.4.5" }
yew = "0.17"
yew-router = { version = "0.14.0", features = ["default", "components"] }
serde_json = "1.0"
serde_urlencoded = "0.7.0"
serde = "1.0"
http = "0.2.1"
url = { version = "2.1.1", features = ["serde"] }
headers = "0.3.2"
imagesize = "0.8"
num-rational = "0.3"
base64 = "0.12.3"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
mime = "0.3.16"
enum-iterator = "0.6.0"
js-sys = "0.3.45"

[dependencies.web-sys]
version = "0.3.45"
features = [ "FormData", "HtmlFormElement", "EventTarget", "FileList", "File", "Performance", "HtmlSelectElement" ]
