[package]
name = "kiwi-admin"
version = "0.1.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
base64 = "0.12.3"
enum-iterator = "0.6.0"
headers = "0.3.2"
http = "0.2.1"
imagesize = "0.8"
js-sys = "0.3.45"
lexical-core = { version = "0.7.5" } # TODO: Remove
log = "0.4.6"
mime = "0.3.16"
num-rational = "0.3"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
serde = "1.0"
serde_json = "1.0"
serde_plain = "0.3.0"
serde_urlencoded = "0.7.0"
thiserror = "1.0"
url = { version = "2.1.1", features = ["serde"] }
wasm-bindgen = "0.2.67"
wasm-logger = "0.2.0"
wee_alloc = { version = "0.4.5" }
yew = "0.17"
yew-router = { version = "0.14.0", features = ["default", "components"] }

[dependencies.web-sys]
version = "0.3.45"
features = ["FormData", "HtmlFormElement", "EventTarget", "FileList", "File", "Performance", "HtmlSelectElement"]
